fix alignment of content in mobile view

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -6,16 +6,26 @@
     flex-wrap: wrap;
     justify-content: space-between;
 
+    @media(@mobile){
+      flex-direction: column;
+    }
+
    
     
     .text-content {
       width: 48%;
       padding-right: 1%;
+      @media(@mobile){
+        width: 100%;
+      }
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
+      @media(@mobile){
+        width: 100%;
+      }
 
       img {
         border-radius: 10px;
@@ -26,6 +36,9 @@
   .inverse-content {
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
+    @media(@mobile){
+      flex-direction: column-reverse;
+    }
 
     .text-content {
       padding-left: 1%;
